--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -13,14 +13,15 @@
   overflow-y: auto;
 }
 
-.data-table .sticky:nth-of-type(1) {
+.data-table th.sticky {
   position: sticky;
   z-index: 0;
   top: auto;
   left: 0;
   width: 200px;
-  height: 49px;
+  height: 50px;
   overflow-y: auto;
+  border-top: 1px solid #dcdcdc;
   border-right: 1px solid #dcdcdc;
   border-bottom: 1px solid #dcdcdc;
 }
@@ -33,7 +34,8 @@
   white-space: nowrap;
 }
 
-td {
+.sticky.cell {
+  height: 50px;
   white-space: nowrap;
 }
 
