removed outline added boxshadow to simulate border

--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -40,8 +40,7 @@
 }
 
 th.sticky.cell {
-  // outline: 1px solid #dcdcdc;
-  box-shadow: 1px 1px 1px #dfdfdf;
+  box-shadow: 1px -1px 1px #dcdcdc;
 }
 
 .table__row .cell {
@@ -49,7 +48,7 @@ th.sticky.cell {
 }
 
 .sticky.cell:last-child {
+  width: 50px;
   padding: 0;
   justify-items: end;
-  width: 50px;
 }
