add side filter toggle

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,10 +18,13 @@
 
 // pages related styles
 @import "./pages/landing-page";
+@import "./pages/filter-page";
 @import "./pages/app";
 
 // component related styles
 @import "../scss/components/buttons/buttons";
 @import "../scss/components/tables/tables";
+@import "../scss/components/tables/table-toolbar";
+@import "../scss/components/filters/side-filter";
 @import "../components/PageHeader/page-header";
 @import "../components/Sidebar/sidebar";
