--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -1,7 +1,7 @@
 .table__wrapper {
   display: grid;
-  grid-template-columns: 1fr auto;
   position: relative;
+  grid-template-columns: 1fr auto;
 }
 
 .scrollable {
@@ -14,15 +14,17 @@
   overflow-y: auto;
 }
 
-.data-table th.sticky {
-  position: sticky;
-  z-index: 0;
-  top: auto;
-  left: 0;
-  width: 200px;
-  height: 50px;
-  overflow-y: auto;
-  border-bottom: 0;
+.data-table th.sticky.cell {
+  @include medium {
+    position: sticky;
+    z-index: 0;
+    top: auto;
+    left: 0;
+    width: 200px;
+    // height: 50px;
+    overflow-y: auto;
+    box-shadow: 1px 0px 1px #dcdcdc;
+  }
 
   @include large {
     width: auto;
@@ -30,7 +32,7 @@
 }
 
 .table__header-row {
-  position: sticky;
+  // position: sticky;
   z-index: 1;
   top: 0;
   left: 0;
@@ -42,7 +44,7 @@
 }
 
 th.sticky.cell {
-  box-shadow: 1px 1px 1px #dcdcdc;
+  // box-shadow: 1px 1px 1px #dcdcdc;
 }
 
 .table__row .cell {
