--- a/src/scss/pages/_filter-page.scss
+++ b/src/scss/pages/_filter-page.scss
@@ -1,7 +1,7 @@
 .filter-page {
+  height: 100%;
   padding: 0 16px;
   background-color: #f4f4f4;
-  height: 100%;
 
   @include medium {
     padding: 0 32px;
@@ -19,5 +19,5 @@
 
 .table__container {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr;
 }
