--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,7 +24,7 @@
 // component related styles
 @import "../scss/components/buttons/buttons";
 @import "../scss/components/tables/tables";
-@import "../scss/components/tables/table-toolbar";
+// @import "../scss/components/tables/table-toolbar";
 @import "../scss/components/filters/side-filter";
 @import "../components/PageHeader/page-header";
 @import "../components/Sidebar/sidebar";
