added side filter functionality

--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -1,5 +1,7 @@
-.table-wrapper {
-  position: relative;
+.table__wrapper {
+  display: grid;
+
+  grid-template-columns: 1fr auto;
 }
 
 .table--scroll-x,
