added sticky header

--- a/src/scss/components/tables/_tables.scss
+++ b/src/scss/components/tables/_tables.scss
@@ -1,5 +1,6 @@
 .table__wrapper {
   display: grid;
+  position: relative;
   grid-template-columns: 1fr auto;
   height: 300px;
 }
@@ -7,6 +8,12 @@
 .table--scroll-x,
 .table--sticky {
   overflow-x: scroll;
+}
+
+.table__header-row {
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 
 .cell {
