deleted unnecessary files/folder and created details table

--- a/src/scss/components/tables/_table-toolbar.scss
+++ b/src/scss/components/tables/_table-toolbar.scss
@@ -5,6 +5,6 @@
   background-color: #fff;
 
   @include medium {
-    grid-template-columns: 1fr 256px;
+    grid-template-columns: 1fr auto;
   }
 }
