--- a/src/content/DetailsPage/_details-page.scss
+++ b/src/content/DetailsPage/_details-page.scss
@@ -1,9 +1,9 @@
 .details-page {
   height: 100%;
-  padding: 0 16px;
+  padding: 0 $spacing-05;
   background-color: #f4f4f4;
 
   @include medium {
-    padding: 0 32px;
+    padding: 0 $spacing-07;
   }
 }
