--- a/src/components/PageHeader/_page-header.scss
+++ b/src/components/PageHeader/_page-header.scss
@@ -1,8 +1,8 @@
-.page-header__container {
+.component__container--page-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 32px 0;
+  padding: $spacing-07 0;
 }
 
 .page-header {
