--- a/src/components/Tables/_tables.scss
+++ b/src/components/Tables/_tables.scss
@@ -13,7 +13,7 @@
   position: relative;
   z-index: 3;
   grid-template-columns: 1fr auto;
-  height: 400px;
+  // height: 400px;
   transform: translate3d(0, 0, 0);
   transition: all 0.2s ease-in-out;
 }
