started sitting a height on the sidefilter container

--- a/src/components/SideFilter/_side-filter.scss
+++ b/src/components/SideFilter/_side-filter.scss
@@ -27,10 +27,20 @@
 
 .side-filter__container {
   display: grid;
+  grid-template-rows: 1fr 200px 1fr;
   position: relative;
   width: 224px;
-  height: 100%;
+  min-height: 100%;
   transition: transform 0.2s;
+}
+
+.height--medium {
+  grid-template-rows: 50px 1fr 50px;
+  align-items: space-between;
+}
+
+.height--large {
+  grid-template-rows: 50px 496px 50px;
 }
 
 .side-filter--from-right .side-filter__container {
@@ -53,6 +63,11 @@
   border-right: 1px solid #dcdcdc;
 }
 
+.side-filter__form-container {
+  // align-content: space-around;
+  overflow: scroll;
+}
+
 .multiselect__container {
   padding: 0 16px;
   padding-bottom: 0;
@@ -60,10 +75,13 @@
 
 .side-filter__heading-container {
   display: flex;
+  position: sticky;
+  top: 0;
   justify-content: space-between;
   height: 24px;
   padding: 16px;
   padding-bottom: 0;
+  z-index: 3;
 }
 
 .side-filter__button--close {
