--- a/src/components/Tables/_tables.scss
+++ b/src/components/Tables/_tables.scss
@@ -15,13 +15,20 @@
   overflow-y: scroll;
 }
 
+tr.table__header > th:last-child,
+tr.table__header > th {
+  position: sticky;
+  z-index: 2;
+  top: 0;
+}
+
 .table--sticky-pagination {
   position: sticky;
   // position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
   position: -o-sticky;
-  z-index: 9;
+  z-index: 2;
   bottom: 0;
 }
 
@@ -42,14 +49,19 @@ th.table__row--sticky-column:first-child {
 
   @include medium {
     position: sticky;
-    z-index: 2;
+    z-index: 3;
     left: 0;
-    box-shadow: 4px 0 8px 0 rgba(0, 0, 0, 0.1);
+    // box-shadow: 4px 0 8px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 1px 0 1px 0 rgba(0, 0, 0, 0.1);
   }
 
   @include large {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
+}
+
+th.table__row--sticky-column:first-child {
+  z-index: 1;
 }
 
 th.table__header--sticky-column:first-child {
@@ -59,9 +71,4 @@ th.table__header--sticky-column:first-child {
 td.table-cell {
   background-color: #fff;
   white-space: nowrap;
-}
-
-.table__thead {
-  position: sticky;
-  top: 50px;
 }
