added wekit prefix

--- a/src/components/Tables/_tables.scss
+++ b/src/components/Tables/_tables.scss
@@ -24,7 +24,7 @@ tr.table__header > th {
 
 .table--sticky-pagination {
   position: sticky;
-  // position: -webkit-sticky;
+  position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
   position: -o-sticky;
