added the most basic of column resives in vanilla JS

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,5 +20,6 @@
 @import "../components/Sidebar/sidebar";
 @import "../components/PageHeader/page-header";
 @import "../components/Tables/tables";
+@import "../components/ResizableTable/resizeable-tables";
 @import "../components/TableToolBar/table-toolbar";
 @import "../components/SideFilter/side-filter";
