--- a/src/components/Tables/_tables.scss
+++ b/src/components/Tables/_tables.scss
@@ -37,11 +37,15 @@ tr.table__header > th {
   border: 0;
 }
 
-.table-cell:last-child {
-  width: 50px;
-  padding: 0;
-  justify-self: flex-end;
-}
+// .table-cell:last-child {
+//   width: 50px;
+//   padding: 0;
+//   justify-self: flex-end;
+// }
+
+// .button--action-overflow {
+//   padding: 0;
+// }
 
 th.table__header--sticky-column:first-child,
 th.table__row--sticky-column:first-child {
@@ -68,7 +72,8 @@ th.table__header--sticky-column:first-child {
   background-color: #dcdcdc;
 }
 
-td.table-cell {
+td.table-cell,
+.button--action-overflow {
   background-color: #fff;
   white-space: nowrap;
 }
